demo2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-2
  namespace: demo2
spec:
  selector:
    app: web2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
